Some fixes to alignments of social media buttons - refs #7

--- a/simple.css
+++ b/simple.css
@@ -103,9 +103,13 @@ code {
   padding: 5px;
 }
 
+/* class for social media buttons in social.inc. Note that the
+   line-height is set so all the buttons align (otherwise the
+   FB button is offset) - see http://stackoverflow.com/a/21919504/1862861 */ 
 .social {
   border-bottom: 1px solid #999;
   padding: 2px;
+  line-height: 10px;
 }
 
 /* classes for the footer text */
